# kafka-partition-remapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: docker-publish.yml  release.yml  semver-check.yml  test.yml
config/: development-local.yaml  example.yaml  high-throughput.yaml  mtls-enterprise.yaml  multi-tenant.yaml  sasl-scram-internal.yaml  sasl-ssl-confluent-cloud.yaml
crates/kafka-remapper-cli/: Cargo.toml
crates/kafka-remapper-cli/src/: main.rs
crates/kafka-remapper-core/: Cargo.toml  README.md
crates/kafka-remapper-core/benches/: partition_remapping.rs
crates/kafka-remapper-core/src/: config.rs  error.rs  lib.rs
crates/kafka-remapper-core/src/auth/: mod.rs  principal.rs  ssl_principal_mapper.rs
crates/kafka-remapper-core/src/auth/sasl/: credentials.rs  jwt.rs  mod.rs  oauthbearer.rs  plain.rs  scram.rs
crates/kafka-remapper-core/src/broker/: connection.rs  metadata_refresh.rs  mod.rs  pool.rs  stream.rs
crates/kafka-remapper-core/src/handlers/: api_versions.rs  fetch.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  passthrough.rs  produce.rs  sasl.rs
crates/kafka-remapper-core/src/metrics/: mod.rs  prometheus.rs
crates/kafka-remapper-core/src/network/: client_stream.rs  codec.rs  connection.rs  context.rs  listener.rs  mod.rs
crates/kafka-remapper-core/src/remapper/: mod.rs  partition_remapper.rs  topic_registry.rs
crates/kafka-remapper-core/src/testing/: harness.rs  mock_broker.rs  mod.rs
crates/kafka-remapper-core/src/tls/: client.rs  mod.rs  server.rs
crates/kafka-remapper-core/tests/: e2e_tests.rs  fetch_tests.rs  metadata_tests.rs  offset_tests.rs  per_topic_mapping_tests.rs  produce_tests.rs  security_tests.rs
docker/: Dockerfile  config-docker.yaml  docker-compose.yml  prometheus.yml
docs/: PRD-Kafka-Partition-Remapping Proxy – Authentication & Encryption.md  architecture.md  authentication.md  configuration.md  getting-started.md  prd.md  protocol-mapping.md  quickstart.md  test-plan-prd.md
