[workspace]
resolver = "2"
members = ["crates/kafka-remapper-core", "crates/kafka-remapper-cli"]

[workspace.package]
version = "0.5.5"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/osodevops/kafka-partition-remapper"
homepage = "https://github.com/osodevops/kafka-partition-remapper"
description = "Kafka partition remapping proxy for cost optimization"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Kafka protocol
kafka-protocol = "0.17"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP server for metrics
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
dashmap = "6.1"

# TLS/SSL
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2.2"
webpki-roots = "0.26"
rustls-pki-types = "1.10"

# Regex (for principal mapping and env var expansion)
regex = "1.11"

# X.509 certificate parsing (for principal extraction from mTLS)
x509-parser = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
# Allow some clippy warnings that are too strict
redundant_closure_for_method_calls = "allow"
large_enum_variant = "allow"
should_implement_trait = "allow"
derivable_impls = "allow"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Conditions to При)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Alarm Alarm)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to auto-include files like README.md
auto-includes = true
# A GitHub repo to push Homebrew formulas to
tap = "osodevops/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Allow custom modifications to release.yml (crates.io, scoop publishing)
allow-dirty = ["ci"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
